# fakebank_backend

./: .gitignore  Dockerfile  celery.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
bank/: celery_app.py  mixins.py  settings.py  tasks.py  urls.py
payments/: admin.py  choices.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
payments/migrations/: 0001_initial.py  0002_receipt.py  0002_remove_invoice_expiration_date_cannot_be_past_date.py  0003_alter_receipt_invoice.py  0004_remove_invoice_amount_currency_alter_invoice_amount.py
payments/templates/: index.html
